# logLLM

./: .gitignore  .gitmodules  README.md  collector.py  config.py  container_manger.py  data_struct.py  database.py  grok_patterns.yaml  llm_model.py  logger.py  other_grok_patterns.yaml  pyproject.toml  rag_manager.py  requirement.txt  requirements.txt
agents/: agent_abc.py  graph.py  linear_analyze_agent.py  pre_process_agent.py  reasoing_agent.py  reasoning_agent.py
doc/: README.md  agents.md  configurable.md  error_analysis_agents.md  error_analysis_overview.md  graph.md  overview.md  prompts_manager.md  utils.md
doc/agents/: README.md  agent_abc.md  all_groups_parser_agent.md  error_analysis_pipeline_agent.md  error_clusterer_agent.md  error_summarizer_agent.md  group_log_parser_agent.md  scroll_grok_parser_agent.md  simple_grok_log_parser_agent.md  single_group_parser_agent.md  static_grok_parser_agent.md  timestamp_normalizer_agent.md
doc/cli/: README.md  analyze-errors.md  analyze_errors.md  collect.md  db.md  es-parse.md  global_options.md  normalize-ts.md  normalize_ts.md  parse.md  pm.md  static_grok_parse.md
doc/development/: DETAILED_GUIDELINE.md  README.md
doc/mcp/: README.md  mcp_manager.md  schemas.md  tool_registry.md
doc/tutorial/: README.md  llm_integration_patterns.md
frontend/: package-lock.json  package.json  vite.config.ts
prompts/: prompts.json  rag.py  role.py
tests/: llm.py  log_parser_agent.py  log_parser_test.py  minimal_scroll_test.py  rec_parser.py  test_derived_field_processor.py  test_drain.py  test_grok_parser.py  test_grok_parser1.py  test_grok_parser2.py  test_parser.py
utils/: chunk_manager.py  container_manger.py  data_struct.py  llm_model.py  prompts_manager.py  rag_manager.py
(+154 files in other folders)
